Fixed strange offset on firefox

--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -1,7 +1,7 @@
 #hero {
   height: 80vh;
   background: $heroBackground;
-  padding: 10vh;
+  padding: 10vh 0;
   text-align: center;
   color: $heroMain;
 
